remove ScriptFileMarker type and refactor comment-based help

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -6,5 +6,6 @@
   <packageSources>
     <add key="omnisharp" value="https://www.myget.org/F/omnisharp/api/v3/index.json" protocolVersion="3" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="local" value="/Users/tyleonha/Downloads/nuget" />
   </packageSources>
 </configuration>
