ms-vscode.csharp to ms-dotnettools.csharp

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 	"postCreateCommand": "dotnet restore",
 
 	"extensions": [
-        "ms-vscode.csharp",
+        "ms-dotnettools.csharp",
         "ms-vscode.powershell-preview",
         "davidanson.vscode-markdownlint",
         "editorconfig.editorconfig"
