--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,7 @@
     // See http://go.microsoft.com/fwlink/?LinkId=827846
     // for the documentation about the extensions.json format
     "recommendations": [
-        "ms-vscode.csharp",
+        "ms-dotnettools.csharp",
         "ms-vscode.powershell",
         "davidanson.vscode-markdownlint",
         "editorconfig.editorconfig"
