--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -17,7 +17,7 @@ steps:
       Write-Host "##$vstsCommandString"
     displayName: Install PowerShell daily
 
-  - pwsh: Get-ChildItem -Path env:
+  - pwsh: 'Get-ChildItem -Path env:'
     displayName: Capture environment
     condition: succeededOrFailed()
 
