--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -3,12 +3,15 @@ parameters:
 
 steps:
   - powershell: |
-      Write-Host "Installing pwsh..."
+      Write-Host "Installing PowerShell Daily..."
+
       $powerShellPath = Join-Path -Path $env:AGENT_TEMPDIRECTORY -ChildPath 'powershell'
-      Invoke-WebRequest -Uri https://raw.githubusercontent.com/PowerShell/PowerShell/master/tools/install-powershell.ps1 -outfile ./install-powershell.ps1
+      Invoke-WebRequest -Uri https://raw.githubusercontent.com/PowerShell/PowerShell/master/tools/install-powershell.ps1 -OutFile ./install-powershell.ps1
+
       ./install-powershell.ps1 -Destination $powerShellPath -Daily
+
+      # Update PATH
       $vstsCommandString = "vso[task.setvariable variable=PATH]$powerShellPath;$env:PATH"
-      Write-Host "sending " + $vstsCommandString
       Write-Host "##$vstsCommandString"
     displayName: Install PowerShell daily
 
