--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -2,19 +2,21 @@ parameters:
   pwsh: true
 
 steps:
-  - powershell: |
-      Write-Host "Installing PowerShell Daily..."
+  # TODO: Bring this back when we understand why it was causing E2E tests to hang.
+  # Related issue: https://github.com/PowerShell/PowerShellEditorServices/issues/1335
+  # - powershell: |
+  #     Write-Host "Installing PowerShell Daily..."
 
-      # Use `AGENT_TEMPDIRECTORY` to make sure the downloaded PowerShell is cleaned up.
-      $powerShellPath = Join-Path -Path $env:AGENT_TEMPDIRECTORY -ChildPath 'powershell'
-      Invoke-WebRequest -Uri https://aka.ms/install-powershell.ps1 -OutFile ./install-powershell.ps1
+  #     # Use `AGENT_TEMPDIRECTORY` to make sure the downloaded PowerShell is cleaned up.
+  #     $powerShellPath = Join-Path -Path $env:AGENT_TEMPDIRECTORY -ChildPath 'powershell'
+  #     Invoke-WebRequest -Uri https://aka.ms/install-powershell.ps1 -OutFile ./install-powershell.ps1
 
-      ./install-powershell.ps1 -Destination $powerShellPath -Daily
+  #     ./install-powershell.ps1 -Destination $powerShellPath -Daily
 
-      # Using `prependpath` to update the PATH just for this build.
-      Write-Host "##vso[task.prependpath]$powerShellPath"
-    displayName: Install PowerShell Daily
-    continueOnError: true
+  #     # Using `prependpath` to update the PATH just for this build.
+  #     Write-Host "##vso[task.prependpath]$powerShellPath"
+  #   displayName: Install PowerShell Daily
+  #   continueOnError: true
 
   - pwsh: '$PSVersionTable'
     displayName: Display PowerShell version information
