compliance repo move

--- a/.vsts-ci/misc-analysis.yml
+++ b/.vsts-ci/misc-analysis.yml
@@ -5,7 +5,6 @@ trigger:
   branches:
     include:
     - master
-    - legacy/1.x
 
 pr:
   branches:
@@ -14,8 +13,19 @@ pr:
     - legacy/1.x
 
 resources:
-- repo: self
-  clean: true
+  repositories:
+  - repository: ComplianceRepo
+    type: github
+    endpoint: ComplianceGHRepo
+    name: PowerShell/compliance
 
 jobs:
-- template: templates/credscan.yml
+- job: Compliance_Job
+  pool:
+    vmImage: windows-latest
+  steps:
+  - checkout: self
+    clean: true
+  - checkout: ComplianceRepo
+    clean: true
+  - template: ci-compliance.yml@ComplianceRepo
