Replace PackageES with ESRP template
This isn't done, but I need to start a pipeline run to see where it's at.

--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -32,6 +32,13 @@ trigger:
       - /LICENSE
       - /CODE_OF_CONDUCT.md
 
+resources:
+  repositories:
+  - repository: ComplianceRepo
+    type: github
+    endpoint: ComplianceGHRepo
+    name: PowerShell/compliance
+
 jobs:
 
 - job: 'ReleaseBuild'
@@ -45,7 +52,9 @@ jobs:
   displayName: Signing Build
   dependsOn: 'ReleaseBuild'
   pool:
-    name: 'Package ES CodeHub Lab E'
+    name: 'Package ES Standard Build'
     demands: DotNetFramework
+  variables:
+  - group: ESRP
   steps:
   - template: templates/release-general.yml
