--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -29,8 +29,8 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.19.0" />
-    <PackageReference Include="OmniSharp.Extensions.DebugAdapter.Server" Version="0.19.0" />
+    <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.19.2-beta0001" />
+    <PackageReference Include="OmniSharp.Extensions.DebugAdapter.Server" Version="0.19.2-beta0001" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.1" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
