--- a/test/PowerShellEditorServices.Test.E2E/PowerShellEditorServices.Test.E2E.csproj
+++ b/test/PowerShellEditorServices.Test.E2E/PowerShellEditorServices.Test.E2E.csproj
@@ -10,8 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="OmniSharp.Extensions.LanguageClient" Version="0.19.0" />
-    <PackageReference Include="OmniSharp.Extensions.DebugAdapter.Client" Version="0.19.0" />
+    <PackageReference Include="OmniSharp.Extensions.LanguageClient" Version="0.19.2-beta0001" />
+    <PackageReference Include="OmniSharp.Extensions.DebugAdapter.Client" Version="0.19.2-beta0001" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
     <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
