Always sign ADO builds
We *only* run builds on ADO with the intent to release, therefore we need to
just always sign them. Otherwise the compliance script's default behavior is to
sign when the build is manually triggered, which is not our workflow. We push a
release branch and expect that automatic build to result in signing.

--- a/.vsts-ci/templates/release-general.yml
+++ b/.vsts-ci/templates/release-general.yml
@@ -21,6 +21,7 @@ steps:
     alwaysCopy: true # So publishing works
     certificateId: 'CP-230012' # Authenticode certificate
     useMinimatch: true # This enables the use of globbing
+    shouldSign: true # We always want to sign
     pattern: |
       # PowerShellEditorServices Script
       PowerShellEditorServices/*.{ps1,psd1,psm1,ps1xml}
