Change release build pool

--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -33,8 +33,8 @@ jobs:
   displayName: Signing Build
   dependsOn: 'ReleaseBuild'
   pool:
-    name: 'Package ES Standard Build'
-    demands: DotNetFramework
+    name: '1ES'
+    demands: ImageOverride -equals MMS2019
   variables:
   - group: ESRP
   steps:
