--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -22,22 +22,25 @@ steps:
   - pwsh: Write-Host "##vso[build.updatebuildnumber]$env:BUILD_SOURCEBRANCHNAME-$env:BUILD_SOURCEVERSION-$((get-date).ToString("yyyyMMddhhmmss"))"
     displayName: Set Build Name for Non-PR
     condition: ne(variables['Build.Reason'], 'PullRequest')
+
   - task: PowerShell@2
     inputs:
       filePath: tools/azurePipelinesBuild.ps1
       pwsh: ${{ parameters.pwsh }}
+
+  - publish: module
+    artifact: PowerShellEditorServices-Build-$(System.JobId)
+    displayName: Publish unsigned pipeline artifacts
+    condition: succeededOrFailed()
+
   - task: PublishTestResults@2
     inputs:
       testRunner: VSTest
       testResultsFiles: '**/*.trx'
     condition: succeededOrFailed()
+
   - task: PublishTestResults@2
     inputs:
       testRunner: NUnit
       testResultsFiles: '**/TestResults.xml'
-    condition: succeededOrFailed()
-  - task: PublishBuildArtifacts@1
-    inputs:
-      ArtifactName: PowerShellEditorServices-CI
-      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     condition: succeededOrFailed()
