--- a/.vsts-ci/templates/publish-general.yml
+++ b/.vsts-ci/templates/publish-general.yml
@@ -1,6 +1,9 @@
 steps:
 - checkout: self
 - checkout: vscode-powershell
+- download: current
+  artifact: PowerShellEditorServices
+  displayName: Download signed pipeline artifacts
 - pwsh: |
     Set-PSRepository -Name PSGallery -InstallationPolicy Trusted | Out-Null
     Install-Module -Name PowerShellForGitHub -Scope CurrentUser -Force -Confirm:$false
