--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -1,32 +1,26 @@
 parameters:
-  pwsh: true
+- name: pwsh
+  type: boolean
+  default: true
 
 steps:
-  - pwsh: '$PSVersionTable'
-    displayName: Display PowerShell version information
+- pwsh: '$PSVersionTable'
+  displayName: PowerShell version
 
-  - pwsh: Write-Host "##vso[build.updatebuildnumber]$env:BUILD_SOURCEBRANCHNAME-$env:BUILD_SOURCEVERSION-$((get-date).ToString("yyyyMMddhhmmss"))"
-    displayName: Set Build Name for Non-PR
-    condition: ne(variables['Build.Reason'], 'PullRequest')
+- task: PowerShell@2
+  displayName: Build and test
+  inputs:
+    filePath: tools/azurePipelinesBuild.ps1
+    pwsh: ${{ parameters.pwsh }}
 
-  - task: PowerShell@2
-    inputs:
-      filePath: tools/azurePipelinesBuild.ps1
-      pwsh: ${{ parameters.pwsh }}
+- publish: module
+  artifact: PowerShellEditorServices-Build-$(System.JobId)
+  displayName: Publish unsigned pipeline artifacts
+  condition: succeededOrFailed()
 
-  - publish: module
-    artifact: PowerShellEditorServices-Build-$(System.JobId)
-    displayName: Publish unsigned pipeline artifacts
-    condition: succeededOrFailed()
-
-  - task: PublishTestResults@2
-    inputs:
-      testRunner: VSTest
-      testResultsFiles: '**/*.trx'
-    condition: succeededOrFailed()
-
-  - task: PublishTestResults@2
-    inputs:
-      testRunner: NUnit
-      testResultsFiles: '**/TestResults.xml'
-    condition: succeededOrFailed()
+- task: PublishTestResults@2
+  displayName: Publish test results
+  inputs:
+    testRunner: VSTest
+    testResultsFiles: '**/*.trx'
+  condition: succeededOrFailed()
