--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 # https://help.github.com/articles/about-codeowners/
 
 # Global reviewers
-* @tylerl0706 @rjmholt
+* @andschwa @rjmholt
 
 # Area: Analysis & Formatting
 src/PowerShellEditorServices/Analysis/                 @rjmholt
