--- a/.vsts-ci/azure-pipelines-ci.yml
+++ b/.vsts-ci/azure-pipelines-ci.yml
@@ -32,35 +32,42 @@ trigger:
       - /LICENSE
       - /CODE_OF_CONDUCT.md
 
-# TODO: Setup matrix of image support.
 jobs:
-- job: 'PS51_Win10'
-  displayName: PowerShell 5.1 | Windows 10
+- job: PS51_Win2016
+  displayName: PowerShell 5.1 - Windows Server 2016
   pool:
-    # TODO: Update this image.
-    vmImage: 'vs2017-win2016'
+    vmImage: vs2017-win2016
   steps:
   - template: templates/ci-general.yml
     parameters:
       pwsh: false
 
-- job: 'PS7_Win10'
-  displayName: PowerShell 7 | Windows 10
+- job: PS51_Win2019
+  displayName: PowerShell 5.1 - Windows Server 2019
   pool:
-    vmImage: 'windows-2019'
+    vmImage: windows-2019
+  steps:
+  - template: templates/ci-general.yml
+    parameters:
+      pwsh: false
+
+- job: PS7_Win2019
+  displayName: PowerShell 7 - Windows Server 2019
+  pool:
+    vmImage: windows-2019
   steps:
   - template: templates/ci-general.yml
 
-- job: 'PS7_macOS'
-  displayName: PowerShell 7 | macOS
+- job: PS7_macOS
+  displayName: PowerShell 7 - macOS 10.15
   pool:
-    vmImage: 'macOS-10.15'
+    vmImage: macOS-10.15
   steps:
   - template: templates/ci-general.yml
 
-- job: 'PS7_Ubuntu'
-  displayName: PowerShell 7 | Ubuntu
+- job: PS7_Ubuntu
+  displayName: PowerShell 7 - Ubuntu 20.04
   pool:
-    vmImage: 'ubuntu-20.04'
+    vmImage: ubuntu-20.04
   steps:
   - template: templates/ci-general.yml
