A little more cleanup
Also fixes the endpoing for the PR compliance job.

--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -4,7 +4,7 @@ parameters:
   default: true
 
 steps:
-- pwsh: '$PSVersionTable'
+- pwsh: $PSVersionTable
   displayName: PowerShell version
 
 - task: PowerShell@2
