--- a/.vsts-ci/templates/publish-general.yml
+++ b/.vsts-ci/templates/publish-general.yml
@@ -1,6 +1,5 @@
 steps:
 - checkout: self
-
 - checkout: vscode-powershell
 
 - download: current
@@ -8,16 +7,6 @@ steps:
   displayName: Download signed pipeline artifacts
 
 - pwsh: |
-    Write-Host "Install and import PowerShell modules"
-    Set-PSRepository -Name PSGallery -InstallationPolicy Trusted | Out-Null
-    Install-Module -Name PowerShellForGitHub -Scope CurrentUser -Force
-    Import-Module '$(Build.SourcesDirectory)/vscode-powershell/tools/ReleaseTools.psm1'
-
-    Write-Host "Setup authentication"
-    Set-GitHubConfiguration -SuppressTelemetryReminder
-    $password = ConvertTo-SecureString -String '$(GitHubToken)' -AsPlainText -Force
-    Set-GitHubAuthentication -Credential (New-Object System.Management.Automation.PSCredential ("token", $password))
-
-    Write-Host "Publish draft release"
-    New-DraftRelease -RepositoryName PowerShellEditorServices -Assets '$(Pipeline.Workspace)/PowerShellEditorServices/PowerShellEditorServices.zip'
+    $(Build.SourcesDirectory)/vscode-powershell/tools/setupReleaseTools.ps1 -Token $(GitHubToken)
+    New-DraftRelease -RepositoryName PowerShellEditorServices -Assets $(Pipeline.Workspace)/PowerShellEditorServices/PowerShellEditorServices.zip
   displayName: Drafting a GitHub Release
