--- a/.vsts-ci/azure-pipelines-ci.yml
+++ b/.vsts-ci/azure-pipelines-ci.yml
@@ -13,6 +13,9 @@ trigger:
     include:
       - master
 
+pr:
+- master
+
 jobs:
 - job: PS51_Win2016
   displayName: PowerShell 5.1 - Windows Server 2016
