Use built-in (and up-to-date) .NET Analyzers
Since all our projects target the `Microsoft.NET.Sdk` we can use
roslyn's built-in analyzers instead of the out-of-date package (we could
update that instead, but this is the modern method).

--- a/PowerShellEditorServices.Common.props
+++ b/PowerShellEditorServices.Common.props
@@ -11,5 +11,8 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/PowerShell/PowerShellEditorServices</RepositoryUrl>
     <DebugType>portable</DebugType>
+    <!-- See: https://docs.microsoft.com/en-us/dotnet/fundamentals/code-analysis/overview -->
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <!-- TODO: Enable `EnforceCodeStyleInBuild` -->
   </PropertyGroup>
 </Project>
