--- a/test/PowerShellEditorServices.Test/PowerShellEditorServices.Test.csproj
+++ b/test/PowerShellEditorServices.Test/PowerShellEditorServices.Test.csproj
@@ -34,8 +34,9 @@
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
     <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
-    <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.19.2" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.4.0-beta.1.build3958" />
+    <!-- TODO: Update to 0.19.3 when available -->
+    <!-- <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.19.2" /> -->
+    <ProjectReference Include="..\..\..\csharp-language-server-protocol\src\Server\Server.csproj" />
   </ItemGroup>
 
   <ItemGroup>
