--- a/test/PowerShellEditorServices.Test.E2E/PowerShellEditorServices.Test.E2E.csproj
+++ b/test/PowerShellEditorServices.Test.E2E/PowerShellEditorServices.Test.E2E.csproj
@@ -10,8 +10,11 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="OmniSharp.Extensions.LanguageClient" Version="0.19.2" />
-    <PackageReference Include="OmniSharp.Extensions.DebugAdapter.Client" Version="0.19.2" />
+    <!-- TODO: Update to 0.19.3 when available -->
+    <!-- <PackageReference Include="OmniSharp.Extensions.LanguageClient" Version="0.19.2" /> -->
+    <!-- <PackageReference Include="OmniSharp.Extensions.DebugAdapter.Client" Version="0.19.2" /> -->
+    <ProjectReference Include="..\..\..\csharp-language-server-protocol\src\Client\Client.csproj" />
+    <ProjectReference Include="..\..\..\csharp-language-server-protocol\src\Dap.Client\Dap.Client.csproj" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
     <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
